crates/legacy_ide/src/code_action/snapshots/legacy_ide__code_action__roxygen__tests__adds_documentation_when_direct_preceding_line_is_not_documentation.snap
---
source: crates/ark/src/lsp/code_action/roxygen.rs
expression: new_text
---
#' Title
#'
#' @param a
#' @param b
#'
#' @returns
#'
#' @export
#' @examples
