crates/legacy_ide/src/code_action/snapshots/legacy_ide__code_action__roxygen__tests__adds_parameters-2.snap
---
source: crates/ark/src/lsp/code_action/roxygen.rs
expression: new_text
---
#' Title
#'
#' @param ...
#'
#' @returns
#'
#' @export
#' @examples
