crates/legacy_ide/src/code_action/snapshots/legacy_ide__code_action__roxygen__tests__no_parameters.snap
---
source: crates/ark/src/lsp/code_action/roxygen.rs
expression: new_text
---
#' Title
#'
#' @returns
#'
#' @export
#' @examples
