crates/legacy_ide/src/code_action/snapshots/legacy_ide__code_action__roxygen__tests__uses_hash_map_of_text_edits_without_document_changes_support.snap
---
source: crates/ark/src/lsp/code_action/roxygen.rs
expression: text_edit.new_text
---
#' Title
#'
#' @param a
#' @param b
#'
#' @returns
#'
#' @export
#' @examples
